Merging recent changes in JDK9.